--- a/index.html
+++ b/index.html
@@ -23,174 +23,98 @@
     </style>
 </head>
 <body class="bg-gray-100 text-gray-800">
+    <div class="min-h-screen flex">
+        <aside class="w-72 bg-white border-r border-gray-200 p-6 sticky top-0 h-screen overflow-y-auto">
+            <div class="mb-6">
+                <h1 class="text-xl font-bold text-gray-900">Learning From Building Systems</h1>
+                <p class="text-sm text-gray-500">Personal knowledge repository</p>
+            </div>
 
-    <div class="container mx-auto p-4 sm:p-6 lg:p-8 max-w-7xl">
-        <!-- Header -->
-        <header class="text-center mb-12">
-            <h1 class="text-5xl md:text-6xl font-bold text-gray-900 mb-4">Learning From Building Systems</h1>
-            <p class="text-xl text-gray-600 max-w-3xl mx-auto mb-2">A Personal Knowledge Repository</p>
-            <p class="text-gray-500 max-w-2xl mx-auto">Documenting problems encountered, solutions discovered, and lessons learned throughout a lifetime of building complex systems</p>
-        </header>
+            <div class="mb-6">
+                <input id="menuSearch" type="text" placeholder="Search sections..."
+                    class="w-full rounded-lg border border-gray-300 px-3 py-2 text-sm focus:outline-none focus:ring-2 focus:ring-blue-400" />
+            </div>
 
-        <!-- Mission Statement -->
-        <section class="bg-gradient-to-r from-blue-50 to-indigo-50 rounded-xl shadow-lg p-8 mb-12 border-l-4 border-blue-600">
-            <h2 class="text-2xl font-bold text-gray-900 mb-4">💡 The Purpose</h2>
-            <div class="text-gray-700 space-y-4">
-                <p class="text-lg">This is a living knowledge base built from real-world experience. Every section represents problems solved, mistakes made, and insights gained while building systems across multiple domains.</p>
-                
-                <div class="bg-white rounded-lg p-6 shadow-sm">
-                    <h3 class="font-bold text-gray-900 mb-3">Core Principles Learned:</h3>
-                    <div class="grid md:grid-cols-2 gap-3 text-sm">
-                        <div class="flex items-start gap-2">
-                            <span class="text-blue-600 font-bold">→</span>
-                            <span><strong>Debug first:</strong> Setup logging & testing infrastructure before building</span>
-                        </div>
-                        <div class="flex items-start gap-2">
-                            <span class="text-blue-600 font-bold">→</span>
-                            <span><strong>Fail-safe design:</strong> External monitoring prevents self-destruction</span>
-                        </div>
-                        <div class="flex items-start gap-2">
-                            <span class="text-blue-600 font-bold">→</span>
-                            <span><strong>Test everything:</strong> Mocking systems validate flows early</span>
-                        </div>
-                        <div class="flex items-start gap-2">
-                            <span class="text-blue-600 font-bold">→</span>
-                            <span><strong>Think lifecycle:</strong> Initial states and end-of-life matter</span>
-                        </div>
-                        <div class="flex items-start gap-2">
-                            <span class="text-blue-600 font-bold">→</span>
-                            <span><strong>Embrace imperfection:</strong> Set thresholds, implement debouncing</span>
-                        </div>
-                        <div class="flex items-start gap-2">
-                            <span class="text-blue-600 font-bold">→</span>
-                            <span><strong>Validate inputs:</strong> Type, constraints, values, sources - always</span>
-                        </div>
-                    </div>
+            <nav id="menu" class="space-y-6">
+                <div>
+                    <h2 class="text-xs font-semibold text-gray-500 uppercase tracking-wider">Engineering & Technical</h2>
+                    <ul class="mt-3 space-y-2">
+                        <li><a data-label="software" href="software/index.html" class="block text-sm hover:text-blue-600">Software</a></li>
+                        <li><a data-label="systems engineering" href="systems/index.html" class="block text-sm hover:text-blue-600">Systems Engineering</a></li>
+                        <li><a data-label="electrical" href="electrical/index.html" class="block text-sm hover:text-blue-600">Electrical</a></li>
+                        <li><a data-label="electronics" href="electronics/index.html" class="block text-sm hover:text-blue-600">Electronics</a></li>
+                        <li><a data-label="mechanical" href="mechanical/index.html" class="block text-sm hover:text-blue-600">Mechanical</a></li>
+                        <li><a data-label="control systems" href="control/index.html" class="block text-sm hover:text-blue-600">Control Systems</a></li>
+                    </ul>
+                </div>
+
+                <div>
+                    <h2 class="text-xs font-semibold text-gray-500 uppercase tracking-wider">Management & Operations</h2>
+                    <ul class="mt-3 space-y-2">
+                        <li><a data-label="management" href="management/index.html" class="block text-sm hover:text-blue-600">Management</a></li>
+                        <li><a data-label="quality" href="quality/index.html" class="block text-sm hover:text-blue-600">Quality</a></li>
+                        <li><a data-label="production" href="production/index.html" class="block text-sm hover:text-blue-600">Production</a></li>
+                        <li><a data-label="finance" href="finance/index.html" class="block text-sm hover:text-blue-600">Finance</a></li>
+                        <li><a data-label="people" href="people/index.html" class="block text-sm hover:text-blue-600">People</a></li>
+                    </ul>
+                </div>
+
+                <div>
+                    <h2 class="text-xs font-semibold text-gray-500 uppercase tracking-wider">Process & Validation</h2>
+                    <ul class="mt-3 space-y-2">
+                        <li><a data-label="testing" href="testing/index.html" class="block text-sm hover:text-blue-600">Testing</a></li>
+                        <li><a data-label="documentation" href="documentation/index.html" class="block text-sm hover:text-blue-600">Documentation</a></li>
+                        <li><a data-label="proof of concept" href="ProofOfConcept/index.html" class="block text-sm hover:text-blue-600">Proof of Concept</a></li>
+                    </ul>
+                </div>
+            </nav>
+
+            <div class="mt-8 text-xs text-gray-500">
+                <div class="flex items-center gap-2">
+                    <a href="https://www.linkedin.com/in/vi-ku/" class="hover:text-blue-600">LinkedIn</a>
+                    <span>•</span>
+                    <a href="https://github.com/Vi-Ku" class="hover:text-blue-600">GitHub</a>
                 </div>
             </div>
-        </section>
+        </aside>
 
-        <!-- Quick Stats -->
-        <div class="grid md:grid-cols-4 gap-4 mb-12">
-            <div class="bg-white rounded-lg shadow p-6 text-center">
-                <div class="text-3xl font-bold text-blue-600">14</div>
-                <div class="text-sm text-gray-600 mt-1">Knowledge Areas</div>
-            </div>
-            <div class="bg-white rounded-lg shadow p-6 text-center">
-                <div class="text-3xl font-bold text-green-600">∞</div>
-                <div class="text-sm text-gray-600 mt-1">Lifetime Learning</div>
-            </div>
-            <div class="bg-white rounded-lg shadow p-6 text-center">
-                <div class="text-3xl font-bold text-purple-600">⚡</div>
-                <div class="text-sm text-gray-600 mt-1">Real Problems</div>
-            </div>
-            <div class="bg-white rounded-lg shadow p-6 text-center">
-                <div class="text-3xl font-bold text-orange-600">🎯</div>
-                <div class="text-sm text-gray-600 mt-1">Practical Solutions</div>
-            </div>
-        </div>
+        <main class="flex-1 p-6 sm:p-10">
+            <header class="mb-8">
+                <h2 class="text-3xl font-bold text-gray-900">Why this exists</h2>
+                <p class="text-gray-600 mt-2 max-w-2xl">This site is a living index of lessons learned while solving real-world problems across software, electronics, mechanical, and systems engineering. Use the sidebar to jump to a domain and explore the notes there.</p>
+            </header>
 
-        <main class="space-y-10">
-            <!-- Category: Engineering & Technical -->
-            <section>
-                <div class="mb-6 border-l-4 border-green-500 pl-4">
-                    <h2 class="text-3xl font-bold text-gray-900 mb-1">🔧 Engineering & Technical</h2>
-                    <p class="text-gray-600">Building, debugging, and optimizing systems from software to hardware</p>
-                </div>
-                <div class="grid md:grid-cols-2 lg:grid-cols-3 gap-5">
-                    <a href="software/index.html" class="card block p-6">
-                        <h3 class="font-bold text-xl mb-2 text-green-700">Software</h3>
-                        <p class="text-gray-600">Software architecture, logging, web development, and system design principles.</p>
-                    </a>
-                    <a href="systems/index.html" class="card block p-6">
-                        <h3 class="font-bold text-xl mb-2 text-purple-700">Systems Engineering</h3>
-                        <p class="text-gray-600">Requirements, diagnostics, testing, and holistic system design approaches.</p>
-                    </a>
-                    <a href="electrical/index.html" class="card block p-6">
-                        <h3 class="font-bold text-xl mb-2 text-yellow-700">Electrical</h3>
-                        <p class="text-gray-600">Hardware selection, electrical system design, and component integration.</p>
-                    </a>
-                    <a href="electronics/index.html" class="card block p-6">
-                        <h3 class="font-bold text-xl mb-2 text-red-700">Electronics</h3>
-                        <p class="text-gray-600">Electronic circuit design, debugging techniques, and embedded systems.</p>
-                    </a>
-                    <a href="mechanical/index.html" class="card block p-6">
-                        <h3 class="font-bold text-xl mb-2 text-orange-700">Mechanical</h3>
-                        <p class="text-gray-600">Mechanical design principles, debugging approaches, and testing methodologies.</p>
-                    </a>
-                    <a href="control/index.html" class="card block p-6">
-                        <h3 class="font-bold text-xl mb-2 text-indigo-700">Control Systems</h3>
-                        <p class="text-gray-600">Controller design, simulation, and control system implementation.</p>
-                    </a>
-                </div>
+            <section class="bg-white rounded-xl shadow p-6 max-w-3xl">
+                <h3 class="text-xl font-semibold text-gray-900 mb-3">Principles I keep returning to</h3>
+                <ul class="space-y-2 text-gray-700 text-sm">
+                    <li>• Debug before you build (logging and testing first).</li>
+                    <li>• Systems should be fail-safe and observable.</li>
+                    <li>• Mocking makes risky ideas safe to test.</li>
+                    <li>• Define the start state and end-of-life state early.</li>
+                    <li>• Real systems are non-ideal; set thresholds.</li>
+                    <li>• Validate inputs: type, constraints, source.</li>
+                </ul>
             </section>
 
-            <!-- Category: Management & Operations -->
-            <section>
-                <div class="mb-6 border-l-4 border-blue-500 pl-4">
-                    <h2 class="text-3xl font-bold text-gray-900 mb-1">📊 Management & Operations</h2>
-                    <p class="text-gray-600">Planning, executing, and delivering projects successfully</p>
-                </div>
-                <div class="grid md:grid-cols-2 lg:grid-cols-3 gap-5">
-                    <a href="management/index.html" class="card block p-6">
-                        <h3 class="font-bold text-xl mb-2 text-blue-700">Management</h3>
-                        <p class="text-gray-600">Frameworks and guides on risk assessment, prioritization, time estimation, and fire-fighting strategies.</p>
-                    </a>
-                    <a href="quality/index.html" class="card block p-6">
-                        <h3 class="font-bold text-xl mb-2 text-teal-700">Quality</h3>
-                        <p class="text-gray-600">Quality assurance processes, standards, and best practices.</p>
-                    </a>
-                    <a href="production/index.html" class="card block p-6">
-                        <h3 class="font-bold text-xl mb-2 text-cyan-700">Production</h3>
-                        <p class="text-gray-600">Manufacturing processes, production planning, and scaling systems.</p>
-                    </a>
-                    <a href="finance/index.html" class="card block p-6">
-                        <h3 class="font-bold text-xl mb-2 text-emerald-700">Finance</h3>
-                        <p class="text-gray-600">Budget planning, cost estimation, and financial management.</p>
-                    </a>
-                    <a href="people/index.html" class="card block p-6">
-                        <h3 class="font-bold text-xl mb-2 text-amber-700">People</h3>
-                        <p class="text-gray-600">Team dynamics, communication, and organizational practices.</p>
-                    </a>
-                </div>
-            </section>
-
-            <!-- Category: Process & Validation -->
-            <section>
-                <div class="mb-6 border-l-4 border-purple-500 pl-4">
-                    <h2 class="text-3xl font-bold text-gray-900 mb-1">📝 Process & Validation</h2>
-                    <p class="text-gray-600">Ensuring quality through testing, documentation, and iteration</p>
-                </div>
-                <div class="grid md:grid-cols-2 lg:grid-cols-3 gap-5">
-                    <a href="testing/index.html" class="card block p-6">
-                        <h3 class="font-bold text-xl mb-2 text-pink-700">Testing</h3>
-                        <p class="text-gray-600">Testing strategies across software, electronics, mechanical, and system levels.</p>
-                    </a>
-                    <a href="documentation/index.html" class="card block p-6">
-                        <h3 class="font-bold text-xl mb-2 text-violet-700">Documentation</h3>
-                        <p class="text-gray-600">Documentation standards, technical writing, and knowledge management.</p>
-                    </a>
-                    <a href="ProofOfConcept/index.html" class="card block p-6">
-                        <h3 class="font-bold text-xl mb-2 text-lime-700">Proof of Concept</h3>
-                        <p class="text-gray-600">POC methodologies, rapid prototyping, and validation approaches.</p>
-                    </a>
-                </div>
+            <section class="mt-10 max-w-3xl">
+                <h3 class="text-lg font-semibold text-gray-900">How to use this site</h3>
+                <p class="text-gray-600 text-sm mt-2">Use the sidebar search to quickly filter sections. Each subsystem has its own index and contains the topics documented so far.</p>
             </section>
         </main>
-
-        <!-- Footer -->
-        <footer class="mt-16 py-8 border-t-2 border-gray-200">
-            <div class="text-center space-y-4">
-                <div class="flex justify-center items-center gap-8 text-sm text-gray-600">
-                    <a href="https://www.linkedin.com/in/vi-ku/" class="hover:text-blue-600 transition">LinkedIn</a>
-                    <span>•</span>
-                    <a href="https://github.com/Vi-Ku" class="hover:text-blue-600 transition">GitHub</a>
-                </div>
-                <p class="text-gray-500 text-sm">📚 A living repository of lessons learned · Updated continuously</p>
-                <p class="text-gray-400 text-xs">&copy; 2025-∞ Learning From Building Systems</p>
-            </div>
-        </footer>
     </div>
 
+    <script>
+        const searchInput = document.getElementById('menuSearch');
+        const menu = document.getElementById('menu');
+
+        searchInput.addEventListener('input', () => {
+            const query = searchInput.value.toLowerCase();
+            const links = menu.querySelectorAll('a[data-label]');
+            links.forEach(link => {
+                const label = link.getAttribute('data-label');
+                link.parentElement.style.display = label.includes(query) ? 'block' : 'none';
+            });
+        });
+    </script>
 </body>
 </html>
