--- a/index.html
+++ b/index.html
@@ -9,62 +9,68 @@
     <style>
         body {
             font-family: 'Inter', sans-serif;
+            background: #f7f7fb;
         }
-        .card {
-            background-color: white;
-            border-radius: 0.75rem;
-            box-shadow: 0 4px 6px -1px rgb(0 0 0 / 0.1), 0 2px 4px -2px rgb(0 0 0 / 0.1);
-            transition: transform 0.2s ease-in-out, box-shadow 0.2s ease-in-out;
+        .sidebar-link {
+            border-radius: 0.5rem;
+            padding: 0.4rem 0.6rem;
+            transition: background-color 0.15s ease, color 0.15s ease;
         }
-        .card:hover {
-            transform: translateY(-5px);
-            box-shadow: 0 10px 15px -3px rgb(0 0 0 / 0.1), 0 4px 6px -4px rgb(0 0 0 / 0.1);
+        .sidebar-link:hover {
+            background-color: #eef2ff;
+            color: #1d4ed8;
+        }
+        .soft-card {
+            background: white;
+            border-radius: 1rem;
+            box-shadow: 0 6px 16px rgba(15, 23, 42, 0.06);
+            border: 1px solid #eef2f7;
         }
     </style>
 </head>
 <body class="bg-gray-100 text-gray-800">
     <div class="min-h-screen flex">
-        <aside class="w-72 bg-white border-r border-gray-200 p-6 sticky top-0 h-screen overflow-y-auto">
-            <div class="mb-6">
-                <h1 class="text-xl font-bold text-gray-900">Learning From Building Systems</h1>
-                <p class="text-sm text-gray-500">Personal knowledge repository</p>
+        <aside class="w-72 bg-white/80 backdrop-blur border-r border-gray-200 p-6 sticky top-0 h-screen overflow-y-auto">
+            <div class="mb-8">
+                <h1 class="text-lg font-bold text-gray-900">Learning From Building Systems</h1>
+                <p class="text-xs text-gray-500 mt-1">Personal knowledge repository</p>
             </div>
 
             <div class="mb-6">
                 <input id="menuSearch" type="text" placeholder="Search sections..."
-                    class="w-full rounded-lg border border-gray-300 px-3 py-2 text-sm focus:outline-none focus:ring-2 focus:ring-blue-400" />
+                    class="w-full rounded-lg border border-gray-200 bg-white px-3 py-2 text-sm focus:outline-none focus:ring-2 focus:ring-blue-400" />
             </div>
 
             <nav id="menu" class="space-y-6">
                 <div>
                     <h2 class="text-xs font-semibold text-gray-500 uppercase tracking-wider">Engineering & Technical</h2>
-                    <ul class="mt-3 space-y-2">
-                        <li><a data-label="software" href="software/index.html" class="block text-sm hover:text-blue-600">Software</a></li>
-                        <li><a data-label="systems engineering" href="systems/index.html" class="block text-sm hover:text-blue-600">Systems Engineering</a></li>
-                        <li><a data-label="electrical" href="electrical/index.html" class="block text-sm hover:text-blue-600">Electrical</a></li>
-                        <li><a data-label="electronics" href="electronics/index.html" class="block text-sm hover:text-blue-600">Electronics</a></li>
-                        <li><a data-label="mechanical" href="mechanical/index.html" class="block text-sm hover:text-blue-600">Mechanical</a></li>
-                        <li><a data-label="control systems" href="control/index.html" class="block text-sm hover:text-blue-600">Control Systems</a></li>
+                    <ul class="mt-3 space-y-1">
+                        <li><a data-label="software" href="software/index.html" class="sidebar-link block text-sm text-gray-700">Software</a></li>
+                        <li><a data-label="systems engineering" href="systems/index.html" class="sidebar-link block text-sm text-gray-700">Systems Engineering</a></li>
+                        <li><a data-label="electrical" href="electrical/index.html" class="sidebar-link block text-sm text-gray-700">Electrical</a></li>
+                        <li><a data-label="electronics" href="electronics/index.html" class="sidebar-link block text-sm text-gray-700">Electronics</a></li>
+                        <li><a data-label="mechanical" href="mechanical/index.html" class="sidebar-link block text-sm text-gray-700">Mechanical</a></li>
+                        <li><a data-label="control systems" href="control/index.html" class="sidebar-link block text-sm text-gray-700">Control Systems</a></li>
                     </ul>
                 </div>
 
                 <div>
                     <h2 class="text-xs font-semibold text-gray-500 uppercase tracking-wider">Management & Operations</h2>
-                    <ul class="mt-3 space-y-2">
-                        <li><a data-label="management" href="management/index.html" class="block text-sm hover:text-blue-600">Management</a></li>
-                        <li><a data-label="quality" href="quality/index.html" class="block text-sm hover:text-blue-600">Quality</a></li>
-                        <li><a data-label="production" href="production/index.html" class="block text-sm hover:text-blue-600">Production</a></li>
-                        <li><a data-label="finance" href="finance/index.html" class="block text-sm hover:text-blue-600">Finance</a></li>
-                        <li><a data-label="people" href="people/index.html" class="block text-sm hover:text-blue-600">People</a></li>
+                    <ul class="mt-3 space-y-1">
+                        <li><a data-label="management" href="management/index.html" class="sidebar-link block text-sm text-gray-700">Management</a></li>
+                        <li><a data-label="quality" href="quality/index.html" class="sidebar-link block text-sm text-gray-700">Quality</a></li>
+                        <li><a data-label="production" href="production/index.html" class="sidebar-link block text-sm text-gray-700">Production</a></li>
+                        <li><a data-label="finance" href="finance/index.html" class="sidebar-link block text-sm text-gray-700">Finance</a></li>
+                        <li><a data-label="people" href="people/index.html" class="sidebar-link block text-sm text-gray-700">People</a></li>
                     </ul>
                 </div>
 
                 <div>
                     <h2 class="text-xs font-semibold text-gray-500 uppercase tracking-wider">Process & Validation</h2>
-                    <ul class="mt-3 space-y-2">
-                        <li><a data-label="testing" href="testing/index.html" class="block text-sm hover:text-blue-600">Testing</a></li>
-                        <li><a data-label="documentation" href="documentation/index.html" class="block text-sm hover:text-blue-600">Documentation</a></li>
-                        <li><a data-label="proof of concept" href="ProofOfConcept/index.html" class="block text-sm hover:text-blue-600">Proof of Concept</a></li>
+                    <ul class="mt-3 space-y-1">
+                        <li><a data-label="testing" href="testing/index.html" class="sidebar-link block text-sm text-gray-700">Testing</a></li>
+                        <li><a data-label="documentation" href="documentation/index.html" class="sidebar-link block text-sm text-gray-700">Documentation</a></li>
+                        <li><a data-label="proof of concept" href="ProofOfConcept/index.html" class="sidebar-link block text-sm text-gray-700">Proof of Concept</a></li>
                     </ul>
                 </div>
             </nav>
@@ -80,12 +86,12 @@
 
         <main class="flex-1 p-6 sm:p-10">
             <header class="mb-8">
-                <h2 class="text-3xl font-bold text-gray-900">Why this exists</h2>
-                <p class="text-gray-600 mt-2 max-w-2xl">This site is a living index of lessons learned while solving real-world problems across software, electronics, mechanical, and systems engineering. Use the sidebar to jump to a domain and explore the notes there.</p>
+                <h2 class="text-3xl font-semibold text-gray-900">Why this exists</h2>
+                <p class="text-gray-600 mt-2 max-w-2xl">A personal, evolving index of problems solved and lessons learned across disciplines. Use the sidebar to jump to any subsystem and explore what’s documented.</p>
             </header>
 
-            <section class="bg-white rounded-xl shadow p-6 max-w-3xl">
-                <h3 class="text-xl font-semibold text-gray-900 mb-3">Principles I keep returning to</h3>
+            <section class="soft-card p-6 max-w-3xl">
+                <h3 class="text-lg font-semibold text-gray-900 mb-3">Principles I return to</h3>
                 <ul class="space-y-2 text-gray-700 text-sm">
                     <li>• Debug before you build (logging and testing first).</li>
                     <li>• Systems should be fail-safe and observable.</li>
