--- a/index.html
+++ b/index.html
@@ -51,6 +51,7 @@
                         <li><a data-label="electronics" href="electronics/index.html" class="sidebar-link block text-sm text-gray-700">Electronics</a></li>
                         <li><a data-label="mechanical" href="mechanical/index.html" class="sidebar-link block text-sm text-gray-700">Mechanical</a></li>
                         <li><a data-label="control systems" href="control/index.html" class="sidebar-link block text-sm text-gray-700">Control Systems</a></li>
+                        <li><a data-label="optimization" href="optimization/index.html" class="sidebar-link block text-sm text-gray-700">Optimization</a></li>
                     </ul>
                 </div>
 
