--- a/index.html
+++ b/index.html
@@ -74,6 +74,13 @@
                         <li><a data-label="proof of concept" href="ProofOfConcept/index.html" class="sidebar-link block text-sm text-gray-700">Proof of Concept</a></li>
                     </ul>
                 </div>
+
+                <div>
+                    <h2 class="text-xs font-semibold text-gray-500 uppercase tracking-wider">Language</h2>
+                    <ul class="mt-3 space-y-1">
+                        <li><a data-label="language" href="language/index.html" class="sidebar-link block text-sm text-gray-700">Languages</a></li>
+                    </ul>
+                </div>
             </nav>
 
             <div class="mt-8 text-xs text-gray-500">
