--- a/index.html
+++ b/index.html
@@ -94,13 +94,19 @@
 
         <main class="flex-1 p-6 sm:p-10">
             <header class="mb-8">
-                <h2 class="text-3xl font-semibold text-gray-900">Why this exists</h2>
+                <div class="inline-flex items-center gap-2 px-3 py-1 rounded-full text-xs bg-indigo-50 text-indigo-700 border border-indigo-100">
+                    🚀 Knowledge Playground
+                </div>
+                <h2 class="text-3xl font-semibold text-gray-900 mt-3">Why this exists</h2>
                 <p class="text-gray-600 mt-2 max-w-2xl">A personal, evolving index of problems solved and lessons learned across disciplines. Use the sidebar to jump to any subsystem and explore what’s documented.</p>
             </header>
 
             <section class="soft-card p-6 max-w-3xl">
-                <h3 class="text-lg font-semibold text-gray-900 mb-3">Principles I return to</h3>
-                <ul class="space-y-2 text-gray-700 text-sm">
+                <div class="flex items-center justify-between flex-wrap gap-3">
+                    <h3 class="text-lg font-semibold text-gray-900">Principles I return to</h3>
+                    <div class="text-xs text-gray-500">✨ Small truths, big leverage</div>
+                </div>
+                <ul class="space-y-2 text-gray-700 text-sm mt-4">
                     <li>• Debug before you build (logging and testing first).</li>
                     <li>• Systems should be fail-safe and observable.</li>
                     <li>• Mocking makes risky ideas safe to test.</li>
@@ -110,9 +116,15 @@
                 </ul>
             </section>
 
-            <section class="mt-10 max-w-3xl">
-                <h3 class="text-lg font-semibold text-gray-900">How to use this site</h3>
-                <p class="text-gray-600 text-sm mt-2">Use the sidebar search to quickly filter sections. Each subsystem has its own index and contains the topics documented so far.</p>
+            <section class="mt-10 max-w-3xl grid sm:grid-cols-2 gap-4">
+                <div class="soft-card p-5">
+                    <h3 class="text-sm font-semibold text-gray-900">How to use this site</h3>
+                    <p class="text-gray-600 text-sm mt-2">Use the sidebar search to quickly filter sections. Each subsystem has its own index and contains the topics documented so far.</p>
+                </div>
+                <div class="soft-card p-5">
+                    <h3 class="text-sm font-semibold text-gray-900">What gets added</h3>
+                    <p class="text-gray-600 text-sm mt-2">New problems, solutions, and mini-postmortems from real projects. If it teaches something, it belongs here.</p>
+                </div>
             </section>
         </main>
     </div>
