--- a/arts/shayari/index.html
+++ b/arts/shayari/index.html
@@ -12,7 +12,7 @@
 </head>
 <body class="bg-gray-100 text-gray-800">
     <div class="container mx-auto p-4 sm:p-6 lg:p-8 max-w-3xl">
-        <a href="../index.html" class="text-blue-600 hover:text-blue-800 text-sm">&larr; Back to Languages</a>
+        <a href="../index.html" class="text-blue-600 hover:text-blue-800 text-sm">&larr; Back to Arts</a>
         <h1 class="text-4xl font-bold text-gray-900 mt-4">Shayari</h1>
         <p class="text-gray-600 mt-2">Themes, drafts, and favorite verses.</p>
     </div>
