main page restructure

--- a/index.html
+++ b/index.html
@@ -26,6 +26,23 @@
             box-shadow: 0 6px 16px rgba(15, 23, 42, 0.06);
             border: 1px solid #eef2f7;
         }
+        .tab-button {
+            padding: 0.35rem 0.75rem;
+            border-radius: 999px;
+            border: 1px solid transparent;
+            background: #f1f5f9;
+            color: #334155;
+            font-size: 0.75rem;
+            transition: all 0.15s ease;
+        }
+        .tab-button.active {
+            background: #e0e7ff;
+            color: #1d4ed8;
+            border-color: #c7d2fe;
+        }
+        .tab-button:hover {
+            background: #e2e8f0;
+        }
     </style>
 </head>
 <body class="bg-gray-100 text-gray-800">
@@ -108,29 +125,151 @@
                 <p class="text-gray-600 mt-2 max-w-2xl">A personal, evolving index of problems solved and lessons learned across disciplines. Use the sidebar to jump to any subsystem and explore what’s documented.</p>
             </header>
 
-            <section class="soft-card p-6 max-w-3xl">
-                <div class="flex items-center justify-between flex-wrap gap-3">
-                    <h3 class="text-lg font-semibold text-gray-900">Principles I return to</h3>
-                    <div class="text-xs text-gray-500">✨ Small truths, big leverage</div>
+            <section class="grid lg:grid-cols-3 gap-6">
+                <div class="soft-card p-6 lg:col-span-2">
+                    <div class="flex items-center justify-between flex-wrap gap-3">
+                        <h3 class="text-lg font-semibold text-gray-900">Spotlight</h3>
+                        <span class="text-xs text-gray-500">Featured this week</span>
+                    </div>
+                    <div class="mt-4 grid sm:grid-cols-2 gap-4">
+                        <a href="optimization/index.html" class="soft-card p-4 block">
+                            <h4 class="text-sm font-semibold text-gray-900">Optimization</h4>
+                            <p class="text-sm text-gray-600 mt-1">Why optimize, and how classical + AI methods fit together.</p>
+                        </a>
+                        <a href="systems/index.html" class="soft-card p-4 block">
+                            <h4 class="text-sm font-semibold text-gray-900">Systems Engineering</h4>
+                            <p class="text-sm text-gray-600 mt-1">Requirements → testing → diagnostics.</p>
+                        </a>
+                    </div>
                 </div>
-                <ul class="space-y-2 text-gray-700 text-sm mt-4">
-                    <li>• Debug before you build (logging and testing first).</li>
-                    <li>• Systems should be fail-safe and observable.</li>
-                    <li>• Mocking makes risky ideas safe to test.</li>
-                    <li>• Define the start state and end-of-life state early.</li>
-                    <li>• Real systems are non-ideal; set thresholds.</li>
-                    <li>• Validate inputs: type, constraints, source.</li>
-                </ul>
+                <div class="soft-card p-6">
+                    <h3 class="text-lg font-semibold text-gray-900">Principles I return to</h3>
+                    <ul class="space-y-2 text-gray-700 text-sm mt-4">
+                        <li>• Debug before you build.</li>
+                        <li>• Systems should be observable.</li>
+                        <li>• Mock before you commit.</li>
+                        <li>• Define start & end states early.</li>
+                        <li>• Validate inputs always.</li>
+                    </ul>
+                </div>
             </section>
 
-            <section class="mt-10 max-w-3xl grid sm:grid-cols-2 gap-4">
-                <div class="soft-card p-5">
-                    <h3 class="text-sm font-semibold text-gray-900">How to use this site</h3>
-                    <p class="text-gray-600 text-sm mt-2">Use the sidebar search to quickly filter sections. Each subsystem has its own index and contains the topics documented so far.</p>
+            <section class="mt-10">
+                <div class="flex items-center justify-between flex-wrap gap-3">
+                    <h3 class="text-lg font-semibold text-gray-900">Browse by category</h3>
+                    <div class="flex gap-2">
+                        <button class="tab-button active" data-tab="all">All</button>
+                        <button class="tab-button" data-tab="engineering">Engineering</button>
+                        <button class="tab-button" data-tab="management">Management</button>
+                        <button class="tab-button" data-tab="process">Process</button>
+                        <button class="tab-button" data-tab="language">Language</button>
+                        <button class="tab-button" data-tab="arts">Arts</button>
+                    </div>
                 </div>
-                <div class="soft-card p-5">
-                    <h3 class="text-sm font-semibold text-gray-900">What gets added</h3>
-                    <p class="text-gray-600 text-sm mt-2">New problems, solutions, and mini-postmortems from real projects. If it teaches something, it belongs here.</p>
+
+                <div class="mt-4 grid sm:grid-cols-2 lg:grid-cols-3 gap-4" id="tabGrid">
+                    <a data-category="engineering" href="software/index.html" class="soft-card p-4 block">
+                        <h4 class="text-sm font-semibold text-gray-900">Software</h4>
+                        <p class="text-sm text-gray-600 mt-1">Architecture, logging, web, design.</p>
+                    </a>
+                    <a data-category="engineering" href="systems/index.html" class="soft-card p-4 block">
+                        <h4 class="text-sm font-semibold text-gray-900">Systems Engineering</h4>
+                        <p class="text-sm text-gray-600 mt-1">Requirements, testing, diagnostics.</p>
+                    </a>
+                    <a data-category="engineering" href="electrical/index.html" class="soft-card p-4 block">
+                        <h4 class="text-sm font-semibold text-gray-900">Electrical</h4>
+                        <p class="text-sm text-gray-600 mt-1">Hardware selection, integration.</p>
+                    </a>
+                    <a data-category="engineering" href="electronics/index.html" class="soft-card p-4 block">
+                        <h4 class="text-sm font-semibold text-gray-900">Electronics</h4>
+                        <p class="text-sm text-gray-600 mt-1">Circuits, embedded systems.</p>
+                    </a>
+                    <a data-category="engineering" href="mechanical/index.html" class="soft-card p-4 block">
+                        <h4 class="text-sm font-semibold text-gray-900">Mechanical</h4>
+                        <p class="text-sm text-gray-600 mt-1">Design, testing, materials.</p>
+                    </a>
+                    <a data-category="engineering" href="control/index.html" class="soft-card p-4 block">
+                        <h4 class="text-sm font-semibold text-gray-900">Control Systems</h4>
+                        <p class="text-sm text-gray-600 mt-1">Controllers, simulation.</p>
+                    </a>
+                    <a data-category="engineering" href="optimization/index.html" class="soft-card p-4 block">
+                        <h4 class="text-sm font-semibold text-gray-900">Optimization</h4>
+                        <p class="text-sm text-gray-600 mt-1">Classical, convex, AI-based.</p>
+                    </a>
+                    <a data-category="management" href="management/index.html" class="soft-card p-4 block">
+                        <h4 class="text-sm font-semibold text-gray-900">Management</h4>
+                        <p class="text-sm text-gray-600 mt-1">Risk, prioritization, estimation.</p>
+                    </a>
+                    <a data-category="management" href="quality/index.html" class="soft-card p-4 block">
+                        <h4 class="text-sm font-semibold text-gray-900">Quality</h4>
+                        <p class="text-sm text-gray-600 mt-1">Processes and standards.</p>
+                    </a>
+                    <a data-category="management" href="production/index.html" class="soft-card p-4 block">
+                        <h4 class="text-sm font-semibold text-gray-900">Production</h4>
+                        <p class="text-sm text-gray-600 mt-1">Manufacturing, scaling.</p>
+                    </a>
+                    <a data-category="management" href="finance/index.html" class="soft-card p-4 block">
+                        <h4 class="text-sm font-semibold text-gray-900">Finance</h4>
+                        <p class="text-sm text-gray-600 mt-1">Costing, budgeting.</p>
+                    </a>
+                    <a data-category="management" href="people/index.html" class="soft-card p-4 block">
+                        <h4 class="text-sm font-semibold text-gray-900">People</h4>
+                        <p class="text-sm text-gray-600 mt-1">Team dynamics, orgs.</p>
+                    </a>
+                    <a data-category="process" href="testing/index.html" class="soft-card p-4 block">
+                        <h4 class="text-sm font-semibold text-gray-900">Testing</h4>
+                        <p class="text-sm text-gray-600 mt-1">Validation strategies.</p>
+                    </a>
+                    <a data-category="process" href="documentation/index.html" class="soft-card p-4 block">
+                        <h4 class="text-sm font-semibold text-gray-900">Documentation</h4>
+                        <p class="text-sm text-gray-600 mt-1">Knowledge management.</p>
+                    </a>
+                    <a data-category="process" href="ProofOfConcept/index.html" class="soft-card p-4 block">
+                        <h4 class="text-sm font-semibold text-gray-900">Proof of Concept</h4>
+                        <p class="text-sm text-gray-600 mt-1">Prototyping and validation.</p>
+                    </a>
+                    <a data-category="language" href="language/index.html" class="soft-card p-4 block">
+                        <h4 class="text-sm font-semibold text-gray-900">Languages</h4>
+                        <p class="text-sm text-gray-600 mt-1">English, Japanese, and more.</p>
+                    </a>
+                    <a data-category="arts" href="arts/index.html" class="soft-card p-4 block">
+                        <h4 class="text-sm font-semibold text-gray-900">Arts</h4>
+                        <p class="text-sm text-gray-600 mt-1">Philosophy, poems, shayari.</p>
+                    </a>
+                </div>
+            </section>
+
+            <section class="mt-10">
+                <div class="flex items-center justify-between flex-wrap gap-3">
+                    <h3 class="text-lg font-semibold text-gray-900">Journey</h3>
+                    <div class="flex gap-2">
+                        <button class="tab-button active" data-year="2026">2026</button>
+                        <button class="tab-button" data-year="2025">2025</button>
+                        <button class="tab-button" data-year="2024">2024</button>
+                    </div>
+                </div>
+
+                <div class="mt-4 space-y-3" id="timeline">
+                    <div class="soft-card p-4" data-year="2026">
+                        <div class="text-xs text-gray-500">Jan 2026</div>
+                        <div class="text-sm text-gray-900 font-semibold">Built the knowledge hub + sidebar search</div>
+                        <div class="text-sm text-gray-600">Created a scalable way to track lessons and systems.</div>
+                    </div>
+                    <div class="soft-card p-4" data-year="2026">
+                        <div class="text-xs text-gray-500">Jan 2026</div>
+                        <div class="text-sm text-gray-900 font-semibold">Added Optimization and Language subsystems</div>
+                        <div class="text-sm text-gray-600">Started clustering learning into clear domains.</div>
+                    </div>
+                    <div class="soft-card p-4" data-year="2025">
+                        <div class="text-xs text-gray-500">2025</div>
+                        <div class="text-sm text-gray-900 font-semibold">Documented management estimation frameworks</div>
+                        <div class="text-sm text-gray-600">Time estimation and risk prioritization notes.</div>
+                    </div>
+                    <div class="soft-card p-4" data-year="2024">
+                        <div class="text-xs text-gray-500">2024</div>
+                        <div class="text-sm text-gray-900 font-semibold">Built initial system engineering notes</div>
+                        <div class="text-sm text-gray-600">Requirements, diagnostics, testing.</div>
+                    </div>
                 </div>
             </section>
         </main>
@@ -146,6 +285,33 @@
             links.forEach(link => {
                 const label = link.getAttribute('data-label');
                 link.parentElement.style.display = label.includes(query) ? 'block' : 'none';
+            });
+        });
+
+        const tabButtons = document.querySelectorAll('.tab-button[data-tab]');
+        const tabItems = document.querySelectorAll('#tabGrid [data-category]');
+        tabButtons.forEach(button => {
+            button.addEventListener('click', () => {
+                tabButtons.forEach(btn => btn.classList.remove('active'));
+                button.classList.add('active');
+                const selected = button.getAttribute('data-tab');
+                tabItems.forEach(item => {
+                    const category = item.getAttribute('data-category');
+                    item.style.display = selected === 'all' || category === selected ? 'block' : 'none';
+                });
+            });
+        });
+
+        const yearButtons = document.querySelectorAll('.tab-button[data-year]');
+        const timelineItems = document.querySelectorAll('#timeline [data-year]');
+        yearButtons.forEach(button => {
+            button.addEventListener('click', () => {
+                yearButtons.forEach(btn => btn.classList.remove('active'));
+                button.classList.add('active');
+                const year = button.getAttribute('data-year');
+                timelineItems.forEach(item => {
+                    item.style.display = item.getAttribute('data-year') === year ? 'block' : 'none';
+                });
             });
         });
     </script>
